# medusa

./: .gitignore  LICENSE.md  README.md  requirements.txt  setup.cfg
activate/: pyvenv.cfg
activate/Scripts/: activate  activate.bat
data/: dotmedusa.json  medusa-data.json  medusa.json
medusa/: __main__.py  config.py  filebases.py  parsers.py  run.py  server.py
medusa/servers/: __init__.py  fabric.py  forge.py  manager.py  models.py  vanilla.py
minecraftmanager/: __main__.py  config.py  server.py  status.py
test/: test_config.py  test_forge.py  test_forge_parsers.py  test_manager.py  test_parsers.py  test_server.py  test_server_controller.py
