[metadata]
# replace with your username:
name = medusa-jrode
version = 0.0.1
author = Jay Rode
author_email = jay@rode.dev
description = Minecraft server manager and administration tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.therode.net/jrode/medusa
project_urls =
    Bug Tracker = https://git.therode.net/jrode/medusa/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires=['appdirs'],
packages = find:
python_requires = >=3.6